[package]
name = "tasproxy"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/tasproxy"

[dependencies]
rumqttc = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"
dashmap = "5"
json = "0.12"
warp = "0.3"
dotenv = "0.15"
color-eyre = "0.5"
async-stream = "0.3"
pin-utils = "0.1"
hostname = "0.3"
warp-reverse-proxy = { version = "0.3", default_features = false, features = ["rustls-tls"] }
tokio-stream = { version = "0.1.9", features = ["net"] }