[package]
name = "tasproxy"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/tasproxy"

[dependencies]
rumqttc = "0.23.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3.30"
dashmap = "5.5.3"
json = "0.12.4"
warp = "0.3.6"
dotenv = "0.15.0"
color-eyre = "0.6.2"
async-stream = "0.3.5"
pin-utils = "0.1.0"
hostname = "0.3.1"
warp-reverse-proxy = { version = "1.0.0", default_features = false, features = ["rustls-tls"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
base64 = "0.21.7"
